Revert "update css cdn"
This reverts commit b0311da72bf541747a9011604a6279154ba95472.

--- a/maker/templates/base.html
+++ b/maker/templates/base.html
@@ -14,14 +14,15 @@
       <link href="/static/css/basecss/style.css" rel='stylesheet' type='text/css' />
       <link href="/static/css/basecss/footer.css" rel='stylesheet' type='text/css' />
       <!-- Custom Theme files -->
+      <link href='http://fonts.useso.com/css?family=Playball' rel='stylesheet' type='text/css'>
       <link rel="shortcut icon" href="/static/images/favicon.ico">
       <!--<link rel="stylesheet" type="text/css" href="{% static "css/common.css"%}" >-->
       <!--<link rel="stylesheet" type="text/css" href="{% static "css/footer.css"%}" >-->
       <link href="/static/css/basecss/owl.carousel.css" rel="stylesheet">
       <!-- Font Awesome -->
-      <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
       <!-- Ionicons -->
-      <link rel="stylesheet" href="/static/css/ionicons.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
       <!-- Theme style -->
       <link rel="stylesheet" href="/static/dist/css/AdminLTE.min.css">
       <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
