--- a/maker/uc/templates/uc_func_config.html
+++ b/maker/uc/templates/uc_func_config.html
@@ -14,9 +14,9 @@
 <span>功能选择</span>
 <div id="switch" class="switch" style="display:none;">
 	<div class="switch-on switch-animate">
-		<span class="left">ON</span>
+		<span class="left">开</span>
 		<span class="center"></span>
-		<span class="right">OFF</span>
+		<span class="right">关</span>
 	</div>
 </div>
 <div class="fenlei1" style="display:none;">
@@ -31,7 +31,7 @@
 {% block uc_content %}
 <div class="gongneng">
 	<div class="gongneng_box row">
-		<dl class="featureSel_z small-box bg-red ">
+		<dl class="featureSel_z small-box ">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -44,16 +44,16 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
 
 
-		<dl class="featureSel_z  small-box bg-blue ">
+		<dl class="featureSel_z  small-box ">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -66,14 +66,14 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
-		<dl class="featureSel_z  small-box bg-green ">
+		<dl class="featureSel_z  small-box ">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -86,14 +86,14 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
-		<dl class="featureSel_z  small-box bg-yellow ">
+		<dl class="featureSel_z  small-box ">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -105,17 +105,17 @@
 			</dt>
 			<dd>
 				<div class="switch" id="2300100">
-					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+					<div class="switch-off switch-animate">
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
 
 
-		<dl class="featureSel_z  small-box bg-gray ">
+		<dl class="featureSel_z  small-box">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -128,14 +128,14 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
-		<dl class="featureSel_z  small-box bg-light-blue">
+		<dl class="featureSel_z  small-box">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -147,15 +147,15 @@
 			</dt>
 			<dd>
 				<div class="switch" id="2300100">
-					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+					<div class="switch-off switch-animate">
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
-		<dl class="featureSel_z  small-box bg-teal ">
+		<dl class="featureSel_z  small-box">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -168,16 +168,16 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
 
 
-		<dl class="featureSel_z  small-box bg-orange ">
+		<dl class="featureSel_z  small-box">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -190,14 +190,14 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
-		<dl class="featureSel_z  small-box bg-fuchsia ">
+		<dl class="featureSel_z  small-box ">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -210,14 +210,14 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
-		<dl class="featureSel_z  small-box bg-maroon ">
+		<dl class="featureSel_z  small-box">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -230,16 +230,16 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
 
 
-		<dl class="featureSel_z  small-box bg-olive ">
+		<dl class="featureSel_z  small-box">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -252,14 +252,14 @@
 			<dd>
 				<div class="switch" id="2300100">
 					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
 		</dl>
-		<dl class="featureSel_z  small-box bg-lime ">
+		<dl class="featureSel_z  small-box ">
 			<div class="newFeature "></div>
 			<dt>
 				<div class="featureSel_item">
@@ -271,10 +271,10 @@
 			</dt>
 			<dd>
 				<div class="switch" id="2300100">
-					<div class="switch-on switch-animate">
-						<span class="left">ON</span>
+					<div class="switch-off switch-animate">
+						<span class="left">开</span>
 						<span class="center"></span>
-						<span class="right">OFF</span>
+						<span class="right">关</span>
 					</div>
 				</div>
 			</dd>
@@ -373,9 +373,17 @@ var webrobot = {
     }
 }
 webrobot.switchs();
-colors= ["#87CEFA", "#FFF0F5", "#D8BFD8", "#9370DB", "#E6E6FA", "#E0FFFF", "#F5FFFA", "#FAFAD2", "#FFEBCD"];
+// colors= ["#87CEFA", "#FFF0F5", "#D8BFD8", "#9370DB", "#E6E6FA", "#E0FFFF", "#F5FFFA", "#FAFAD2", "#FFEBCD"];
+// $('.gongneng_box dl').css({
+//     "background-color": this.colors[Math.floor(this.colors.length * Math.random())]
+// });
+// $('.featureSel_z').addClass("bg-gray");
 $('.gongneng_box dl').css({
-    "background-color": this.colors[Math.floor(this.colors.length * Math.random())]
+    "background-color":"#d7d7dc "
+});
+
+ $('.small-box-footer').css({
+    "color": "#444"
 });
 
 $(function() {
