--- a/maker/templates/loginfail.html
+++ b/maker/templates/loginfail.html
@@ -29,9 +29,9 @@
                 <div id="wrapper">
                     <div id="login" class="animate form">
                         <form method = 'post' enctype="multipart/form-data" autocomplete="on">
-                            <h1> 激活邮件发送成功 </h1>
+                            <h1> 登录失败 </h1>
                             <p>
-                                <label  > 请到注册邮箱激活你的账号，激活成功后可以登录！</label>
+                                <label  > 账号或密码错误！</label>
                             </p>
                             <p class="signin button">
                                 <a href="/uc/login/" class="to_register"> 登录 </a>
