--- a/maker/templates/regfail.html
+++ b/maker/templates/regfail.html
@@ -29,12 +29,12 @@
                 <div id="wrapper">
                     <div id="login" class="animate form">
                         <form method = 'post' enctype="multipart/form-data" autocomplete="on">
-                            <h1> 激活邮件发送成功 </h1>
+                            <h1> 注册失败 </h1>
                             <p>
-                                <label  > 请到注册邮箱激活你的账号，激活成功后可以登录！</label>
+                                <label  > 邮箱已注册过！</label>
                             </p>
                             <p class="signin button">
-                                <a href="/uc/login/" class="to_register"> 登录 </a>
+                                <a href="/uc/reg/" class="to_register"> 注册 </a>
                             </p>
                         </form>
                     </div>
