--- a/maker/templates/regactivatefail.html
+++ b/maker/templates/regactivatefail.html
@@ -31,7 +31,7 @@
                         <form method = 'post' enctype="multipart/form-data" autocomplete="on">
                             <h1> 激活失败 </h1>
                             <p>
-                                <label  > 账号已经激活过了！</label>
+                                <label  > 请检查您的信箱等信息内容是否正确</label>
                             </p>
                             <p class="signin button">
                                 <a href="/uc/reg/" class="to_register"> 注册 </a>
